--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,6 @@
-#Build files
-BusinessObject/bin
-BusinessObject/obj
-
-DataAccess/bin
-DataAccess/obj
-
-DigitalFUHubApi/bin
-DigitalFUHubApi/obj
-
-DTOs/bin
-DTOs/obj
+# Ignore any files in /bin and /obj Folders
+**/bin/*
+**/obj/*
 
 
 # ASP.NET artifacts
