--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,15 @@
-# Ignore any files in /bin and /obj Folders
-**/bin/*
-**/obj/*
+#Build files
+BusinessObject/bin/
+BusinessObject/obj/
+
+DataAccess/bin/
+DataAccess/obj/
+
+DigitalFUHubApi/bin/
+DigitalFUHubApi/obj/
+
+DTOs/bin/
+DTOs/obj/
 
 
 # ASP.NET artifacts
