--- a/DigitalFUHubApi/appsettings.json
+++ b/DigitalFUHubApi/appsettings.json
@@ -36,7 +36,8 @@
     "BasicAuthUserName": "EMBRETAILWEB",
     "BasicAuthPassword": "SD234dfg34%#@FG@34sfsdf45843f",
     "BasicAuthBase64": "RU1CUkVUQUlMV0VCOlNEMjM0ZGZnMzQlI0BGR0AzNHNmc2RmNDU4NDNm",
-    "DirectoryPathStoreData": "Data/historyTransactionMbBank.json"
+    "DirectoryPathStoreDepositData": "Data/historyDepositTransactionMbBank.json",
+    "DirectoryPathStoreWidrawData": "Data/historyWidrawTransactionMbBank.json"
   },
   "EPPlus": {
     "ExcelPackage": {
