--- a/DigitalFUHubApi/appsettings.json
+++ b/DigitalFUHubApi/appsettings.json
@@ -13,7 +13,7 @@
   },
   "JWT": {
     "Secret": "HEHEHEHEHHEHEHEHEH",
-    "Issuer": "FU-Market",
+    "Issuer": "DIGITALFUHUB",
     "Audience": "",
     "TokenAge": 10,
     "RefreshTokenAge": 11
