--- a/DigitalFUHubApi/appsettings.json
+++ b/DigitalFUHubApi/appsettings.json
@@ -39,9 +39,12 @@
     "DirectoryPathStoreDepositData": "Data/historyDepositTransactionMbBank.json",
     "DirectoryPathStoreWithdrawData": "Data/historyWithdrawTransactionMbBank.json"
   },
-  "EPPlus": {
-    "ExcelPackage": {
-      "LicenseContext": "NonCommercial" //The license context used
+    "EPPlus": {
+        "ExcelPackage": {
+            "LicenseContext": "NonCommercial" //The license context used
+        }
+    },
+    "EndpointFE": {
+        "BaseUrl": "http://localhost:3000"
     }
-  }
 }
