fix job schedule

--- a/DigitalFUHubApi/appsettings.json
+++ b/DigitalFUHubApi/appsettings.json
@@ -32,12 +32,13 @@
     "AccountNo": "0336687454",
     "DeviceIdCommon": "xp4czbl7-mbib-0000-0000-2023060214073587",
     "RefNo": "0336687454-2023062609580818",
-    "SessionId": "971ab250-a8b6-4e7b-9482-f3505055aea2",
+    "SessionId": "dce4427a-c830-4e24-8627-814c657273be",
     "BasicAuthUserName": "EMBRETAILWEB",
     "BasicAuthPassword": "SD234dfg34%#@FG@34sfsdf45843f",
     "BasicAuthBase64": "RU1CUkVUQUlMV0VCOlNEMjM0ZGZnMzQlI0BGR0AzNHNmc2RmNDU4NDNm",
     "DirectoryPathStoreDepositData": "Data/historyDepositTransactionMbBank.json",
-    "DirectoryPathStoreWithdrawData": "Data/historyWithdrawTransactionMbBank.json"
+    "DirectoryPathStoreWithdrawData": "Data/historyWithdrawTransactionMbBank.json",
+    "DirectoryPathStoreData": "Data/historyTransactionMbBank.json"
   },
     "EPPlus": {
         "ExcelPackage": {
