--- a/DigitalFUHubApi/appsettings.json
+++ b/DigitalFUHubApi/appsettings.json
@@ -29,18 +29,10 @@
   "MbBank": {
     "ApiHistoryTransaction": "https://online.mbbank.com.vn/api/retail-web-transactionservice/transaction/getTransactionAccountHistory",
     "ApiInquiryAccountName": "https://online.mbbank.com.vn/api/retail_web/transfer/inquiryAccountName",
-    "FirstBankAccount": {
-      "AccountNo": "688811112001",
-      "DeviceIdCommon": "xp4czbl7-mbib-0000-0000-2023060214073587",
-      "RefNo": "0336687454-2023062609580818",
-      "SessionId": "dce4427a-c830-4e24-8627-814c657273be"
-    },
-    "SecondBankAccount": {
-      "AccountNo": "0336687454",
-      "DeviceIdCommon": "xp4czbl7-mbib-0000-0000-2023060214073587",
-      "RefNo": "0336687454-2023062609580818",
-      "SessionId": "98e4b6d3-f594-49cc-900d-047e544cbded"
-    },
+    "AccountNo": "0336687454",
+    "DeviceIdCommon": "xp4czbl7-mbib-0000-0000-2023060214073587",
+    "RefNo": "0336687454-2023062609580818",
+    "SessionId": "d53f9a50-99e6-429a-8a22-d04e697aeb3a",
     "BasicAuthUserName": "EMBRETAILWEB",
     "BasicAuthPassword": "SD234dfg34%#@FG@34sfsdf45843f",
     "BasicAuthBase64": "RU1CUkVUQUlMV0VCOlNEMjM0ZGZnMzQlI0BGR0AzNHNmc2RmNDU4NDNm",
