add get sessionId Mb bank

--- a/DigitalFUHubApi/appsettings.json
+++ b/DigitalFUHubApi/appsettings.json
@@ -29,7 +29,10 @@
   "MbBank": {
     "ApiHistoryTransaction": "https://online.mbbank.com.vn/api/retail-web-transactionservice/transaction/getTransactionAccountHistory",
     "ApiInquiryAccountName": "https://online.mbbank.com.vn/api/retail_web/transfer/inquiryAccountName",
+    "ApiGetCaptchaImage": "https://online.mbbank.com.vn/api/retail-web-internetbankingms/getCaptchaImage",
+    "ApiLogin": "https://online.mbbank.com.vn/api/retail_web/internetbanking/doLogin",
     "AccountNo": "0336687454",
+    "Password": "0646022851b21cdc6f0317075e771bbf",
     "DeviceIdCommon": "xp4czbl7-mbib-0000-0000-2023060214073587",
     "RefNo": "0336687454-2023062609580818",
     "SessionId": "d53f9a50-99e6-429a-8a22-d04e697aeb3a",
