--- a/DigitalFUHubApi/DigitalFUHubApi.csproj
+++ b/DigitalFUHubApi/DigitalFUHubApi.csproj
@@ -21,6 +21,8 @@
     <PackageReference Include="Quartz" Version="3.7.0" />
     <PackageReference Include="Quartz.Extensions.Hosting" Version="3.7.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+    <PackageReference Include="Tesseract" Version="5.2.0" />
+    <PackageReference Include="Tesseract.Net.SDK" Version="4.5.411" />
     <PackageReference Include="ZXing.Net" Version="0.16.9" />
   </ItemGroup>
 
