add get seesion mb bank jobb

--- a/DigitalFUHubApi/DigitalFUHubApi.csproj
+++ b/DigitalFUHubApi/DigitalFUHubApi.csproj
@@ -37,4 +37,10 @@
     <Folder Include="Files\Excels\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Update="appsettings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
