fix project structure

--- a/DigitalFUHubApi/DigitalFUHubApi.csproj
+++ b/DigitalFUHubApi/DigitalFUHubApi.csproj
@@ -9,6 +9,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="tessdata\**" />
+    <Content Remove="tessdata\**" />
+    <EmbeddedResource Remove="tessdata\**" />
+    <None Remove="tessdata\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="AspNetCoreRateLimit" Version="5.0.0" />
     <PackageReference Include="AutoMapper" Version="12.0.0" />
     <PackageReference Include="Azure.Storage.Blobs" Version="12.17.0" />
@@ -41,6 +48,30 @@
     <Content Update="appsettings.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Remove="C:\Users\dell\.nuget\packages\tesseract.net.sdk\4.5.411\build\..\content\tessdata\configs\config.cfg" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Remove="C:\Users\dell\.nuget\packages\tesseract.net.sdk\4.5.411\build\..\content\tessdata\eng.traineddata" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Remove="C:\Users\dell\.nuget\packages\tesseract.net.sdk\4.5.411\build\..\content\tessdata\equ.traineddata" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Remove="C:\Users\dell\.nuget\packages\tesseract.net.sdk\4.5.411\build\..\content\tessdata\osd.traineddata" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Remove="C:\Users\dell\.nuget\packages\tesseract.net.sdk\4.5.411\build\..\content\tessdata\pdf.ttf" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Remove="C:\Users\dell\.nuget\packages\tesseract.net.sdk\4.5.411\build\..\content\tessdata\pdf.ttx" />
   </ItemGroup>
 
 </Project>
